--- a/home.html
+++ b/home.html
@@ -10,21 +10,58 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
-<body id="home">
-    <nav class="navbar bg-light">
+<body id="home" style="background-color: rgb(0, 0, 0);">
+    <nav class="navbar navbar-expand-lg d-flex justify-content-start">
         <div class="container-fluid">
-            <a class="navbar-brand">Navbar</a>
-            <button class="btn btn-outline-danger" type="button" onclick="Authorization.logout()">Log Out</button>
+            <a class="navbar-brand" href="#">
+                <img src="Images/Netflix_logo.jpeg" alt="Netflix logo" width="90 height="75">
+            </a>   
         </div>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" style="width:100% ; height: 60%">
+              <button class="btn btn-outline-success me-2" type="submit" style="width:50% ; height: 50%">Search</button>
+              <button class="btn btn-outline-danger me-3" type="button" onclick="Authorization.logout()" style="width:60% ; height: 50%">Log Out</button>
+            </form>
+          </div>
+        </div>   
     </nav>
-    <ul id="movies"></ul>
+
+   
+    <div><ul id="comedy" class="text-light">Comedy</ul></div>
+    <div><ul id="drama" class="text-light">Drama</ul></div>
+    <div><ul id="horror" class="text-light">Horror</ul></div>
+    <div><ul id="action" class="text-light">Action</ul></div>
+    <div><ul id="romance" class="text-light">Romance</ul></div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="Js/script.js"></script>
     <script>
-        window.addEventListener('load', function() {
-            view.loadMovies();
+        window.addEventListener('load', function () {
+            comMovie.loadMovies();
+        })
+    </script>
+     <script>
+        window.addEventListener('load', function () {
+            dramaMovie.loadMovies();
+        })
+    </script>
+    <script>
+        window.addEventListener('load', function () {
+            horrorMovie.loadMovies();
+        })
+    </script>
+    <script>
+        window.addEventListener('load', function () {
+            actionMovie.loadMovies();
+        })
+    </script>
+    <script>
+        window.addEventListener('load', function () {
+            romMovie.loadMovies();
         })
     </script>
 </body>
