--- a/home.html
+++ b/home.html
@@ -10,21 +10,113 @@
         integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
-<body id="home">
-    <nav class="navbar bg-light">
+<body id="home" style="background-color: rgba(0, 0, 0);">
+    <nav id="navbar" class="navbar navbar-expand-lg netflix-navbar netflix-padding-right position-fixed w-100" style="z-index: 1">
         <div class="container-fluid">
-            <a class="navbar-brand">Navbar</a>
-            <button class="btn btn-outline-danger" type="button" onclick="Authorization.logout()">Log Out</button>
+            <div class="netflix-row">
+                <section class="left d-flex align-items-center">
+                    <a class="navbar-brand" href="#">
+                        <img src="Images/netflix.png" alt="Netflix logo" width="90 height=" 75">
+                    </a>
+                    <div class="netflix-dropdown-box dropdown">
+                        <button class="netflix-dropdown dropdown-toggle text-light" type="button"
+                            data-bs-toggle="dropdown" aria-expanded="false"
+                            style="background-color: rgba(0, 0, 0, 0.11) ;">
+                            Browse
+                        </button>
+                        <ul class="dropdown-menu" style="background-color: rgba(0, 0, 0, 0.477);">
+                            <li>
+                                <a class="dropdown-item fs-5 text-light nav-link active" href="#comedy">Comedy</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item fs-5 text-light" href="#drama">Drama</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item fs-5 text-light" href="#horror">Horror</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item fs-5 text-light" href="#action">Action</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item fs-5 text-light" href="#romance">Romance</a>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+                <section class="right">
+            </div>
+        </div>
+        </li>
+        </ul>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"
+                style="width:100% ; height: 60%">
+            <button class="btn btn-outline-success me-2" type="submit" style="width:50% ; height: 50%">Search</button>
+            <button class="btn btn-outline-danger me-3 text-nowrap" type="button" onclick="Authorization.logout()"
+                style="width:60% ; height: 50%">Log Out</button>
+        </form>
+        </section>
+        </div>
         </div>
     </nav>
-    <ul id="movies"></ul>
+    <div>
+        <video loop width="100%" height="100%" style="object-fit: cover;">
+            <source
+                src="Images/AFTER EVER HAPPY Teaser Trailer 4K (2022) _ Hero Fiennes-Tiffin, Josephine Langford.mp4">
+        </video>
+    </div>
+
+
+
+
+    <div>
+        <h2 class="h2">Comedy</h2>
+        <ul id="comedy" class="text-light"></ul>
+    </div>
+    <div>
+        <h2 class="h2">Drama</h2>
+        <ul id="drama" class="text-light"></ul>
+    </div>
+    <div>
+        <h2 class="h2">Horror</h2>
+        <ul id="horror" class="text-light"></ul>
+    </div>
+    <div>
+        <h2 class="h2">Action</h2>
+        <ul id="action" class="text-light"></ul>
+    </div>
+    <div>
+        <h2 class="h2">Romance</h2>
+        <ul id="romance" class="text-light"></ul>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="Js/script.js"></script>
     <script>
-        window.addEventListener('load', function() {
-            view.loadMovies();
+        window.addEventListener('load', function () {
+            comMovie.loadMovies();
+            dramaMovie.loadMovies();
+            horrorMovie.loadMovies();
+            actionMovie.loadMovies();
+            romMovie.loadMovies();
+        })
+
+        window.addEventListener('scroll', () => {
+            if (window.scrollY > 100) {
+                document.getElementById('navbar').classList.add('bg-dark')
+            } else {
+                document.getElementById('navbar').classList.remove('bg-dark')
+            }
+        })
+
+        const video = document.querySelector('video');
+        video.addEventListener('mouseover', () => {
+            video.play()
+        });
+        video.addEventListener('mouseleave', () => {
+            video.pause()
         })
     </script>
 </body>
